<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDEAF2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/title"
        android:textColor="@color/material_blue_grey_950"
        android:textIsSelectable="true"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_1"
        style="@style/Button"
        android:onClick="displayToast"
        android:text="@string/button_1" />

    <Button
        android:id="@+id/button_2"
        style="@style/Button"
        android:onClick="displayToast"
        android:text="@string/button_2" />

    <Button
        android:id="@+id/button_3"
        style="@style/Button"
        android:onClick="displayToast"
        android:text="@string/button_3" />

    <Button
        android:id="@+id/button_4"
        style="@style/Button"
        android:onClick="displayToast"
        android:text="@string/button_4" />

    <Button
        android:id="@+id/button_5"
        style="@style/Button"
        android:onClick="displayToast"
        android:text="@string/button_5" />

    <Button
        android:id="@+id/button_6"
        style="@style/Button.Red"
        android:onClick="displayToast"
        android:text="@string/button_6" />
</LinearLayout>
